# interview-coach-app

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
cdk/: app.py  pyproject.toml
core/: settings.py
init_scripts/: init_db.sh
src/: manage.py
src/apps/agents/api/: router.py  schemas.py
src/apps/agents/services/: agent_factory.py  tools.py  workflow_service.py
src/apps/ai_engine/: apps.py
src/apps/ai_engine/s2s/: events.py  session_manger.py
src/apps/ai_engine/s2s/integration/: inline_agent.py  kb.py
src/apps/coaching/: api.py  models.py  schemas.py  services.py
src/apps/coaching/migrations/: 0001_add_initial_coaching_models.py  0001_initial.py  0002_alter_interviewsession_full_transcript_and_more.py
src/apps/common_models/: apps.py  models.py
src/apps/interactions/: consumers.py  routing.py
src/apps/users/: admin.py  api.py  models.py  schemas.py  services.py
src/apps/users/migrations/: 0001_initial.py
src/common/aws/: clients.py
src/common/prompts/: prompt_manager.py
src/common/prompts/templates/: initial_interview.j2
src/core/: api.py  asgi.py  celery.py  exceptions.py  schema.py  urls.py
src/core/settings/: __init__.py  base.py  development.py  docker.py  production.py
